start progress #WA-526. Added js to add slashes into text input. Also fixed #WA-597 with some additional rows. It's not perfect especially on extra large formats but works. Fixed #WA-598 but caused issue where there is now a area not covered by the background image

--- a/sagebrew/sagebrew/static/less/sb_general.less
+++ b/sagebrew/sagebrew/static/less/sb_general.less
@@ -134,11 +134,6 @@
   width: auto;
   line-height: 5px;
 }
-.sb_btn_login{
-  &:extend(.sb_btn_submit);
-  background-color: @sb_off_white;
-  color: @sb_green;
-}
 .sb_btn_icon{
   &:extend(.sb_btn);
   background-color: transparent;
@@ -199,7 +194,9 @@
   &:extend(.sb_nav);
   background-color: @sb_green;
   height: 45px;
-  padding: 0px 15px 0px 15px;
+  //padding: 0px 15px 0px 15px
+  padding-left: 15px;
+  padding-right: 15px;
   margin-top: 0;
   margin-bottom: 0;
   a{
@@ -221,6 +218,7 @@
     border-color: @sb_grey;
     border-width: 1px;
     border-right: none;
+    margin-top: 6px;
   }
 }
 .sb_secondary_nav {
@@ -235,15 +233,14 @@
    }
   }
 .sb_secondary_nav_bar{
-  &:extend(.sb_secondary_nav){
-    background-color: @sb_grey_light;
-    height: @sb_btn_height;
-    padding: 0 0 30px 0px;
-    border-radius: 0 0 2px 2px;
-    border-bottom: solid;
-    border-width: 2px;
-    border-bottom-color: @sb_green_medium;
-  }
+  &:extend(.sb_secondary_nav);
+  background-color: @sb_grey_light;
+  height: @sb_btn_height;
+  padding: 0 0 30px 0px;
+  border-radius: 0 0 2px 2px;
+  border-bottom: solid;
+  border-width: 2px;
+  border-bottom-color: @sb_green_medium;
 }
 .sb_tertiary_nav {
   &:extend(.sb_secondary_nav);
@@ -251,7 +248,7 @@
   border: none;
   height: auto;
   margin-top: 15px;
-  input{
+  input {
     height: @sb_input_height;
     width: 400px;
     border-radius: 5px;
@@ -259,6 +256,13 @@
     border-width: 1px;
     border-color: @sb_grey;
   }
+}
+// Footers
+.sb_footer {
+  background-color: transparent;
+  position: relative;
+  margin-left: -15px;
+  margin-right: -15px;
 }
 // Groupings
 .sb_search{
@@ -276,11 +280,16 @@
 .sb_login{
   &:extend(.sb_search);
   input{
-    padding-top: 0px;
     line-height: 25px;
   }
   ul{
     margin-bottom: 14px;
+  }
+  button{
+    &:extend(.sb_btn_submit);
+    background-color: @sb_off_white;
+    color: @sb_green;
+    height: 28px;
   }
 }
 .sb_dropdown {
