--- a/sagebrew/sagebrew/static/less/sb_initial/sb_signup.less
+++ b/sagebrew/sagebrew/static/less/sb_initial/sb_signup.less
@@ -5,10 +5,9 @@
     float: left;
     width: 100%;
     heigh: 100%;
-    min-height: 600px;
-    min-width: 1000px;
     margin-top: -15px;
     margin-left: -16px;
+    margin-right: -16px;
 }
 .sb_signup_headline_containter {
     margin-top: @sb_common_margin_positive;
